--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 langchain==0.0.292
 openai==0.28.0
-datasets==2.10.1
+datasets==2.15.0
 pinecone-client==2.2.4
-tiktoken==0.5.1
-python-dotenv
+streamlit==1.29.0
+python-dotenv==1.0.0
